packages/jsii/test/negatives/neg.static-const-name.ts
export class MyClass {
  static readonly snake_case = 123;
}
